# cpsspatialar

./: .gitignore  README.md
docs/: README.md  docs.docx  docs_click_to_point.docx  sample_invocations.txt  ~$docs.docx  ~WRL2233.tmp
docs/elsarticle/: elsarticle-template.aux  elsarticle-template.dvi  elsarticle-template.ps  elsarticle-template.tex
docs/elsarticle/back/: elsarticle-template.aux  elsarticle-template.dvi
docs/sample_data/: README.md
paper/: README.md
paper/elsarticle/: elsarticle-template.aux  elsarticle-template.bbl  elsarticle-template.blg  elsarticle-template.dvi  elsarticle-template.ps  elsarticle-template.tex  elsarticle-template_proof.aux  elsarticle-template_proof.bbl  elsarticle-template_proof.blg  elsarticle-template_proof.tex  mybibfile.bib  reviewer_feedback_and_responses_20220112.txt
paper/elsarticle/back/: declaration-of-competing-interests.docx  reviewer_feedback_and_responses.txt
paper/elsarticle/images/: system.jfif  system2.jfif
src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cpsspatialar.sln  rename.cmake
src/apps/applyHomography/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  applyHomography.cpp  applyHomography.sln  applyHomography.vcxproj  applyHomography.vcxproj.filters  cmake_install.cmake
src/apps/applyHomography/applyHomography.dir/Debug/applyHomography.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/apps/applyUndistortion/: CMakeLists.txt  applyUndistortion.cpp
src/apps/calibrateCam/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  calibrateCam.cpp  calibrateCam.sln  calibrateCam.vcxproj  calibrateCam.vcxproj.filters  cmake_install.cmake
src/apps/calibrateCam/calibrateCam.dir/Debug/calibrateCam.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  calibrateCam.lastbuildstate
src/apps/calibrateProj/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  calibrateProj.cpp  calibrateProj.sln  calibrateProj.vcxproj  calibrateProj.vcxproj.filters  cmake_install.cmake
src/apps/calibrateProj/calibrateProj.dir/Debug/calibrateProj.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/apps/calibrateProjMirror/: CMakeLists.txt  calibrateProjMirror.cpp  calibrateProjMirror.cpp.back
src/apps/prepareIm/: CMakeLists.txt  prepareIm.cpp
src/apps/rectify/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  rectify.cpp  rectify.sln  rectify.vcxproj  rectify.vcxproj.filters
src/apps/rectify/rectify.dir/Debug/rectify.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/apps/splitZed/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  splitZed.cpp  splitZed.sln  splitZed.vcxproj  splitZed.vcxproj.filters
src/apps/splitZed/splitZed.dir/Debug/splitZed.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/apps/undistort/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  undistort.cpp  undistort.sln  undistort.vcxproj  undistort.vcxproj.filters
src/apps/undistort/undistort.dir/Debug/undistort.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/apps/visPanTilt/: CMakeLists.txt  visPanTilt.cpp
src/cpslib/libCalib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CalibPattern.cpp  CalibPattern.h  cmake_install.cmake  libCalib.sln  libCalib.vcxproj  libCalib.vcxproj.filters
src/cpslib/libCalib/libCalib.dir/Debug/libCalib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
src/cpslib/libGeom/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Camera.cpp  Camera.h  Plane.cpp  Plane.h  PointCloud.cpp  PointCloud.h  cmake_install.cmake  headers.h  libGeom.sln  libGeom.vcxproj  libGeom.vcxproj.filters
src/cpslib/libGeom/libGeom.dir/Debug/: libGeomd.lib.recipe
src/cpslib/libGeom/libGeom.dir/Debug/libGeom.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
src/cpslib/libHomography/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Homography.cpp  Homography.h  cmake_install.cmake  libHomography.sln  libHomography.vcxproj  libHomography.vcxproj.filters
src/cpslib/libHomography/libHomography.dir/Debug/libHomography.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
src/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
